--- a/MyPortfolio.html
+++ b/MyPortfolio.html
@@ -134,8 +134,8 @@
         </div>
     </footer>
 
-    <!-- <script>
+    <script>
         alert("Hello! everyone I'm Yashashwini. Welcome to my portfolio website!");
-    </script> -->
+    </script>
 </body>
 </html>
