--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td><a href="https://github.com/YendetiYashashwini/My-Portfolio" target="_blank">My Portfolio</a></td>
+                        <td><a href="https://yendetiyashashwini.github.io/My-Portfolio/" target="_blank">My Portfolio</a></td>
                         <td>My Portfolio Website</td>
                         <td>HTML, CSS, JS</td>
                     </tr>
